CS-341 added video check to demo

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<script src="./index.js"></script>
+    <video autoplay muted playsinline></video>
+    <button class="startVideo">Get video</button>
+    <script src="./index.js"></script>
 </body>
 </html>
